<resources>
    <string name="app_name">Ssense</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="cart_tittle">Cart</string>

    <string name="spmoi">Sản phẩm nổi bật</string>
    <string name="giamgia">Giảm giá nhiều nhất</string>
    <string name="nhom4">Nhóm 4 - Lập trình di động 3</string>
    <string name="footer2">Copyright © 2017-2018 Bản quyền thuộc về Nhóm 4</string>

    <string name="tenmathang">Tên mặt hàng :</string>
    <string name="gia">Giá :</string>
    <string name="giacu">Giá trước đây :</string>
    <string name="gia_deal">Giảm giá :</string>
    <string name="phantran">%</string>
</resources>
