<?xml version="1.0" encoding="utf-8"?>
<!--<LinearLayout android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:orientation="vertical"-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android">-->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context="com.ssense.ssense.ActivityController.MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:orientation="vertical">

        <ViewFlipper
            android:id="@+id/viewflip"
            android:layout_width="match_parent"
            android:layout_height="120dp"></ViewFlipper>

        //Sản phẩm mới

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#DCDCDC"
            android:orientation="vertical">
            <!--android:layout_marginTop="8dp">-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#DCDCDC"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/spmoi"
                    android:textColor="#000"
                    android:textSize="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="#fff"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageNoibat1"
                            android:layout_width="match_parent"
                            android:layout_height="100dp" />

                        <TextView
                            android:id="@+id/tenNoibat1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="#00CC33" />

                        <TextView
                            android:id="@+id/giaNoibat1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="#FF6633" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="#fff"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageNoibat2"
                            android:layout_width="match_parent"
                            android:layout_height="100dp" />

                        <TextView
                            android:id="@+id/tenNoibat2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="#00CC33" />

                        <TextView
                            android:id="@+id/giaNoibat2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="#FF6633" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="#fff"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageNoibat3"
                            android:layout_width="match_parent"
                            android:layout_height="100dp" />

                        <TextView
                            android:id="@+id/tenNoibat3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="#00CC33" />

                        <TextView
                            android:id="@+id/giaNoibat3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="#FF6633" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="#fff"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageNoibat4"
                            android:layout_width="match_parent"
                            android:layout_height="100dp" />

                        <TextView
                            android:id="@+id/tenNoibat4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="#00CC33" />

                        <TextView
                            android:id="@+id/giaNoibat4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="#FF6633" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="#fff"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/giamgia"
                android:textColor="#000"
                android:textSize="20dp" />


            <ListView
                android:id="@+id/listV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:dividerHeight="16dp">

            </ListView>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nhom4"
                android:textColor="#fff" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/footer2"
                android:textColor="#fff" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <include
                layout="@layout/app_bar_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragmentMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </LinearLayout>
    </LinearLayout>


    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/activity_main_drawer" />

</android.support.v4.widget.DrawerLayout>
<!--</LinearLayout>-->